feature/회원정보찾기/ 테스트 코드 작성